fix: fixed nav menu height on mobile

--- a/src/components/header/navigation/Navigation.module.css
+++ b/src/components/header/navigation/Navigation.module.css
@@ -24,12 +24,8 @@
     display: grid;
     grid-template-columns: 1fr;
     max-width: 100%;
-    height: 30vh;
     align-items: center;
     justify-items: center;
     margin: 0 auto 5rem;
-  }
-  .navLink {
-    font-size: 1.5rem;
   }
 }
